--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,19 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.companyx.android.appx"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+
+    <supports-screens
+        android:largeScreens="true"
+        android:xlargeScreens="true" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <!-- enable search dialog from any activity -->
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".SelectRecipeActivity" />
+        <!-- parent activity meta-data to support 4.0 and lower -->
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+
         <activity
-            android:name="com.companyx.android.appx.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +37,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.companyx.android.appx.SelectRecipeActivity"
+            android:name=".SelectRecipeActivity"
             android:label="@string/title_recipes"
-            android:parentActivityName="com.companyx.android.appx.MainActivity" >
+            android:launchMode="singleTop"
+            android:parentActivityName=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.companyx.android.appx.MainActivity" />
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
     </application>
 
