Converted recipe DB to singleton
- call RecipeDatabase.getInstance() to use the database from any
Activity
- beware consistency issues if the App decides to kill stuff

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,6 +49,10 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity
+            android:name=".RecipeActivity"
+            android:parentActivityName=".MainActivity" >
+        </activity>
     </application>
 
 </manifest>
