--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.companyx.android.appx"
+    package="com.companyx.android.cookingxp"
     android:versionCode="1"
     android:versionName="1.0.1" >
 
@@ -28,7 +28,7 @@
             android:value=".MainActivity" />
 
         <activity
-            android:name="com.companyx.android.cookingxp.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,10 +37,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.companyx.android.cookingxp.SelectRecipeActivity"
+            android:name=".SelectRecipeActivity"
             android:label="@string/title_recipes"
             android:launchMode="singleTop"
-            android:parentActivityName="com.companyx.android.cookingxp.MainActivity" >
+            android:parentActivityName=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -50,8 +50,12 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity
-            android:name="com.companyx.android.cookingxp.RecipeActivity"
-            android:parentActivityName="com.companyx.android.cookingxp.MainActivity" >
+            android:name=".RecipeActivity"
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity
+            android:name=".TreeActivity"
+            android:parentActivityName=".MainActivity" >
         </activity>
     </application>
 
